Make Base and Prospects class

--- a/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
+++ b/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
@@ -55,8 +55,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="BaseClassTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProspectsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
