--- a/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
+++ b/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
@@ -32,6 +32,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Json">
+      <HintPath>..\packages\System.Json.4.0.20126.16343\lib\net40\System.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,8 +45,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseClass.cs" />
+    <Compile Include="Blog.cs" />
+    <Compile Include="ContactLists.cs" />
+    <Compile Include="ContactProperty.cs" />
+    <Compile Include="Contacts.cs" />
+    <Compile Include="Email.cs" />
+    <Compile Include="EmailEvents.cs" />
+    <Compile Include="EnterpriseEvents.cs" />
+    <Compile Include="Forms.cs" />
+    <Compile Include="Keywords.cs" />
+    <Compile Include="OAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prospects.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="SocialMedia.cs" />
+    <Compile Include="Workflows.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
