--- a/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
+++ b/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
@@ -35,8 +35,10 @@
     <Reference Include="System.Json">
       <HintPath>..\packages\System.Json.4.0.20126.16343\lib\net40\System.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +55,7 @@
     <Compile Include="EmailEvents.cs" />
     <Compile Include="EnterpriseEvents.cs" />
     <Compile Include="Forms.cs" />
+    <Compile Include="IWebClient.cs" />
     <Compile Include="Keywords.cs" />
     <Compile Include="OAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
