--- a/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
+++ b/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
@@ -40,6 +40,11 @@
       <HintPath>..\..\..\..\Rhino.Mocks-3.6-Build-21\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\HubspotAPIWrapper\HubspotAPIWrapper\bin\Debug\System.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
