Refactor tests to Arrange, Act, Assert (AAA) style

--- a/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
+++ b/HubspotAPIWrapper/HubspotAPIWrapper/HubspotAPIWrapper.csproj
@@ -61,6 +61,8 @@
     <Compile Include="EmailEvents.cs" />
     <Compile Include="EnterpriseEvents.cs" />
     <Compile Include="Forms.cs" />
+    <Compile Include="IBaseClass.cs" />
+    <Compile Include="IProspects.cs" />
     <Compile Include="IWebClient.cs" />
     <Compile Include="Keywords.cs" />
     <Compile Include="OAuth.cs" />
