--- a/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
+++ b/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
@@ -76,6 +76,7 @@
     <Compile Include="BaseClassTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProspectsTest.cs" />
+    <Compile Include="ContactsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
