Add Contact Property API

--- a/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
+++ b/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper/UnitTestHubspotAPIWrapper.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ProspectsTest.cs" />
     <Compile Include="ContactsTest.cs" />
     <Compile Include="ContactListsTest.cs" />
+    <Compile Include="ContactPropertyUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
